--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 			<ul>
 				<li><a href="about.html">About</a></li>
 				<li><a href="view.html">View</a></li>
+				<li><a href="schedule.html">Schedule</a></li>
 			</ul>
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
