--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Varela">
 
 		<link href="https://fonts.googleapis.com/css?family=Heebo" rel="stylesheet">
-
 		<link rel="stylesheet" href="title.css">
     <link rel="stylesheet" href="style.css">
 
@@ -23,14 +22,19 @@
 		<div id="title">
 			<span class="glitch" data-text="Knowledge">Knowledge</span>
 		</div>
+	</div>
+		<div class="gradation">
 		<div id="main">
+			<div id="picture"></div>
 			<h1>Knowledge</h1>
 			<ul>
 				<li><a href="about.html">About</a></li>
 				<li><a href="view.html">View</a></li>
-				<li><a href="schedule.html">Schedule</a></li>
 			</ul>
+			<div id="layer2"></div>
+			<div id="layer1"></div>
 		</div>
+	</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="script.js"></script>
