--- a/view.html
+++ b/view.html
@@ -21,11 +21,11 @@
     <div id="main">
 		    <h1>Knowledge</h1>
 				<h2>View</h2>
-        <div style="background-color:white;">
-          <img class="blackboard-img" src="./tnk2.jpg" /><img class="blackboard-img" src="./tnk2.jpg" /><img class="blackboard-img" src="./tnk2.jpg" /><img class="blackboard-img" src="./tnk2.jpg" /><img class="blackboard-img" src="./tnk2.jpg" /><img class="blackboard-img" src="./tnk2.jpg" /><img class="blackboard-img" src="./tnk2.jpg" /><img class="blackboard-img" src="./tnk2.jpg" /><img class="blackboard-img" src="./tnk2.jpg" /><img class="blackboard-img" src="./tnk2.jpg" /><img class="blackboard-img" src="./tnk2.jpg" /><img class="blackboard-img" src="./tnk2.jpg" />
 
-        </div>
-
+        写真をここにはる
+				<div class="back">
+					<a href="index.html"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span></a>
+				</div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
