--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Varela">
 
 		<link href="https://fonts.googleapis.com/css?family=Heebo" rel="stylesheet">
-		<link rel="stylesheet" href="title.css">
-    <link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="css/title.css">
+    <link rel="stylesheet" href="css/style.css">
 
 		<!--[if lt IE 9]>
 			<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -37,6 +37,6 @@
 	</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-		<script type="text/javascript" src="script.js"></script>
+		<script type="text/javascript" src="script/script.js"></script>
 	</body>
 </html>
