--- a/schedule.html
+++ b/schedule.html
@@ -10,11 +10,9 @@
 		<link href="https://fonts.googleapis.com/css?family=Nixie+One" rel="stylesheet">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Varela">
 
-		<link rel="stylesheet" href="title.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 
-    <script type="text/javascript" src="test.js"></script>
-    <script type="text/javascript" src="table_to_csv.js"></script>
+    <script type="text/javascript" src="script/table_to_csv.js"></script>
 		<!--[if lt IE 9]>
 			<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
