--- a/view.html
+++ b/view.html
@@ -9,8 +9,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Nixie+One" rel="stylesheet">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Varela">
 
-		<link rel="stylesheet" href="title.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 
 		<!--[if lt IE 9]>
 			<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -22,8 +21,7 @@
 		    <h1>Knowledge</h1>
 				<h2>View</h2>
         <div style="background-color:white;">
-          <img class="blackboard-img" src="./tnk2.jpg" /><img class="blackboard-img" src="./tnk2.jpg" /><img class="blackboard-img" src="./tnk2.jpg" /><img class="blackboard-img" src="./tnk2.jpg" /><img class="blackboard-img" src="./tnk2.jpg" /><img class="blackboard-img" src="./tnk2.jpg" /><img class="blackboard-img" src="./tnk2.jpg" /><img class="blackboard-img" src="./tnk2.jpg" /><img class="blackboard-img" src="./tnk2.jpg" /><img class="blackboard-img" src="./tnk2.jpg" /><img class="blackboard-img" src="./tnk2.jpg" /><img class="blackboard-img" src="./tnk2.jpg" />
-
+          <img class="blackboard-img" src="img/tnk2.jpg" /><img class="blackboard-img" src="img/tnk2.jpg" /><img class="blackboard-img" src="img/tnk2.jpg" /><img class="blackboard-img" src="img/tnk2.jpg" /><img class="blackboard-img" src="img/tnk2.jpg" /><img class="blackboard-img" src="img/tnk2.jpg" /><img class="blackboard-img" src="img/tnk2.jpg" /><img class="blackboard-img" src="img/tnk2.jpg" /><img class="blackboard-img" src="img/tnk2.jpg" /><img class="blackboard-img" src="img/tnk2.jpg" /><img class="blackboard-img" src="img/tnk2.jpg" /><img class="blackboard-img" src="img/tnk2.jpg" />
         </div>
 
     </div>
