h1を押すとインデックスに戻る

--- a/schedule.html
+++ b/schedule.html
@@ -20,7 +20,7 @@
 	</head>
 	<body>
     <div id="main">
-		    <h1>Knowledge</h1>
+		    <h1><a href="./index.html">Knowledge</a></h1>
 				<h2>Schedule</h2>
         <caption>時間割指定</caption>
         <form action="csv" method="POST" target"_blank" onsubmit="doSomething();return false;">
