--- a/view.html
+++ b/view.html
@@ -18,7 +18,7 @@
 	</head>
 	<body>
     <div id="main">
-		    <h1>Knowledge</h1>
+		    <h1><a href="./index.html">Knowledge</a></h1>
 				<h2>View</h2>
         <div style="background-color:white;">
           <img class="blackboard-img" src="img/tnk2.jpg" /><img class="blackboard-img" src="img/tnk2.jpg" /><img class="blackboard-img" src="img/tnk2.jpg" /><img class="blackboard-img" src="img/tnk2.jpg" /><img class="blackboard-img" src="img/tnk2.jpg" /><img class="blackboard-img" src="img/tnk2.jpg" /><img class="blackboard-img" src="img/tnk2.jpg" /><img class="blackboard-img" src="img/tnk2.jpg" /><img class="blackboard-img" src="img/tnk2.jpg" /><img class="blackboard-img" src="img/tnk2.jpg" /><img class="blackboard-img" src="img/tnk2.jpg" /><img class="blackboard-img" src="img/tnk2.jpg" />
