--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		</div>
 	</div>
 	<div id="main">
-		<h1>Knowledge</h1>
+		<h1><a href="./index.html">Knowledge</a></h1>
 		<ul>
 			<li><a href="about.html">About</a></li>
 			<li><a href="view.html">View</a></li>
