テキストの背景を半透明の城に

--- a/about.html
+++ b/about.html
@@ -18,9 +18,10 @@
 	</head>
 	<body>
 		<div id="main">
-			<h1>Knowledge</h1>
+			<h1><a href="./index.html">Knowledge</a></h1>
 			<h2>About</h2>
-				<h3>Knowledgeとは?</h3>
+      <div style="background-color: rgba(255,255,255,0.5)">
+        <h3>Knowledgeとは?</h3>
 					<p class="main">我々は発見した．学生は居眠りしてしまうものである．
 					レポートを仕上げるために徹夜した，ゲームに夢中になってしまって夜更かしした，彼女と電話していて寝ていない．</p>
 					<p class="main">理由は個人により様々であるが，授業中一度も寝てしまったことがない学生など万に一としていないのである．</p>
@@ -35,6 +36,8 @@
 				<div class="back">
 					<a href="index.html"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span></a>
 				</div>
+      </div>
+
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
