--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 		<title>Knowledge-view</title>
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Nixie+One" rel="stylesheet">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Varela">
+		<link href="https://fonts.googleapis.com/css?family=Heebo" rel="stylesheet">
 
     <link rel="stylesheet" href="css/style.css">
 
@@ -33,9 +33,6 @@
 					<p class="main">◇ Raspberry Piに接続されたカメラで，一定時間おきに黒板を撮影する．</p>
 					<p class="main">◇ 画像処理プログラムによって撮影した画像から黒板部分のみを取り出す．</p>
 					<p class="main">◇ インターネットに画像をアップロードし，携帯電話等のブラウザから画像を閲覧できるようにする.</p>
-				<div class="back">
-					<a href="index.html"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span></a>
-				</div>
       </div>
 
 		</div>
