--- a/schedule.html
+++ b/schedule.html
@@ -8,7 +8,7 @@
 		<title>Knowledge-view</title>
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Nixie+One" rel="stylesheet">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Varela">
+		<link href="https://fonts.googleapis.com/css?family=Heebo" rel="stylesheet">
 
     <link rel="stylesheet" href="css/style.css">
 
@@ -29,9 +29,6 @@
 
           <table class="table3" border=1 id = "table">
         </form>
-				<div class="back">
-					<a href="index.html"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span></a>
-				</div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
