--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Nixie+One" rel="stylesheet">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Varela">
-
 		<link href="https://fonts.googleapis.com/css?family=Heebo" rel="stylesheet">
 		<link rel="stylesheet" href="css/title.css">
     <link rel="stylesheet" href="css/style.css">
@@ -24,10 +23,11 @@
 		</div>
 	</div>
 	<div id="main">
-		<h1><a href="./index.html">Knowledge</a></h1>
+		<h1><a href="./index.html">Knowledge</h1>
 		<ul>
 			<li><a href="about.html">About</a></li>
 			<li><a href="view.html">View</a></li>
+			<li><a href="schedule.html">schedule</a></li>
 		</ul>
 	</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
