--- a/view.html
+++ b/view.html
@@ -7,7 +7,7 @@
 		<title>Knowledge-view</title>
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Nixie+One" rel="stylesheet">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Varela">
+		<link href="https://fonts.googleapis.com/css?family=Heebo" rel="stylesheet">
 
     <link rel="stylesheet" href="css/style.css">
 
